--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.0.3
-  youtube_player_flutter: ^8.1.0
-  flutter_bloc: ^8.1.1
-  bloc: ^8.1.0
+  get: ^4.6.5
   hexcolor: ^3.0.1
   animated_splash_screen: ^1.3.0
 
